# libfreetype

./: Android.mk  CMakeLists.txt  Generic.mk  Linux.mk  Makefile_freetype.py  lutin_freetype.py
